--- a/LanguageBuilder/Views/Words/Index.cshtml
+++ b/LanguageBuilder/Views/Words/Index.cshtml
@@ -1,25 +1,38 @@
-﻿@model IEnumerable<LanguageBuilder.Models.Words>
+﻿<!--model IEnumerable<LanguageBuilder.Models.Words> -->
+
+@model PagedList.IPagedList<LanguageBuilder.Models.Words>
+@using PagedList.Mvc;
+<link href="~/Content/PagedList.css" rel="stylesheet" type="text/css" />
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Words";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Index</h2>
+<h2>Words</h2>
 
 <p>
     @Html.ActionLink("Create New", "Create")
 </p>
+
+@using (Html.BeginForm("Index", "Words", FormMethod.Get))
+{
+    <p>
+        Search for word: @Html.TextBox("SearchString", ViewBag.CurrentFilter as string)
+        <input type="submit" value="Search" />
+    </p>
+}
+
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.german_name)
+            German Name
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.english_name)
+            English Name
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.word_gender)
+           Word Gender
         </th>
         <th></th>
     </tr>
@@ -44,3 +57,8 @@
 }
 
 </table>
+<br />
+Page @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber) of @Model.PageCount
+
+@Html.PagedListPager(Model, page => Url.Action("Index",
+    new { page, sortOrder = ViewBag.CurrentSort, currentFilter = ViewBag.CurrentFilter }))
