--- a/LanguageBuilder/Content/Site.css
+++ b/LanguageBuilder/Content/Site.css
@@ -22,3 +22,23 @@ select,
 textarea {
     max-width: 280px;
 }
+
+/* overwrite the bootstrap*/
+
+.navbar-inverse {
+    background-color: #ff4342;
+    border-color: #080808;
+}
+
+body {
+    font-family: 'Raleway', sans-serif;
+   
+}
+
+.navbar-inverse .navbar-nav > li > a {
+    color: #ffffff;
+}
+
+.navbar-inverse .navbar-brand {
+    color: #ffffff;
+}
