--- a/LanguageBuilder/Views/Students/Delete.cshtml
+++ b/LanguageBuilder/Views/Students/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model LanguageBuilder.Models.Words
+﻿@model LanguageBuilder.Models.Student
 
 @{
     ViewBag.Title = "Delete";
@@ -6,34 +6,34 @@
 }
 
 <h2>Delete</h2>
-
+<p class="error">@ViewBag.ErrorMessage</p>
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Words</h4>
+    <h4>Student</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.german_name)
+            @Html.DisplayNameFor(model => model.LastName)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.german_name)
+            @Html.DisplayFor(model => model.LastName)
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.english_name)
+            @Html.DisplayNameFor(model => model.FirstMidName)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.english_name)
+            @Html.DisplayFor(model => model.FirstMidName)
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.word_gender)
+            @Html.DisplayNameFor(model => model.EnrollmentDate)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.word_gender)
+            @Html.DisplayFor(model => model.EnrollmentDate)
         </dd>
 
     </dl>
