added bootstrap theme and carousel

--- a/LanguageBuilder/Views/DictWords/Index.cshtml
+++ b/LanguageBuilder/Views/DictWords/Index.cshtml
@@ -60,7 +60,8 @@
             @Html.DisplayFor(modelItem => item.conjugation)
         </td>
         <td>
-            @Html.ActionLink("Add", "Add", "UserWords", new { DictWordID=item.DictWordID })
+            <!--Html.ActionLink("Add", "Add", "UserWords", new { id = item.DictWordID })-->
+            <input type="button" value="Add" onclick="location.href='@Url.Action("Add", "UserWords", new { id = item.DictWordID })'" />
             <!--Html.ActionLink("Edit", "Edit", new { id=item.DictWordID }) | -->
             <!--Html.ActionLink("Details", "Details", new { id=item.DictWordID }) | -->
             <!--Html.ActionLink("Delete", "Delete", new { id=item.DictWordID }) -->
