--- a/LanguageBuilder/Views/Home/Index.cshtml
+++ b/LanguageBuilder/Views/Home/Index.cshtml
@@ -2,11 +2,62 @@
     ViewBag.Title = "Home Page";
 }
 
-<div class="jumbotron">
+
+<div id="myCarousel" class="carousel slide" data-ride="carousel" style="width: 1000px; margin: 0 auto">
+    <!-- Indicators -->
+    <ol class="carousel-indicators">
+        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+        <li data-target="#myCarousel" data-slide-to="1"></li>
+        <li data-target="#myCarousel" data-slide-to="2"></li>
+        <li data-target="#myCarousel" data-slide-to="3"></li>
+    </ol>
+
+    <!-- Wrapper for slides -->
+    <div class="carousel-inner" role="listbox">
+        <div class="item active">
+            <img src="@Url.Content("~/Content/images/1r.png")" alt="noimage">
+        </div>
+
+        <div class="item">
+            <img src="@Url.Content("~/Content/images/2r.png")" alt="noimage">
+        </div>
+
+        <div class="item">
+            <img src="@Url.Content("~/Content/images/3r.png")" alt="noimage">
+        </div>
+
+        <div class="item">
+            <img src="@Url.Content("~/Content/images/4r.png")" alt="noimage">
+        </div>
+    </div>
+
+    <!-- Left and right controls -->
+    <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+    </a>
+    <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+    </a>
+</div>
+
+
+
+
+
+<div>
     <h1>LANGUAGE BUILDER</h1>
     <p class="lead">Language Builder is a free web application which helps you learn new languages</p>
     <p><a href=# class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
 </div>
+
+
+
+
+
+
+
 
 <div class="row">
     <div class="col-md-4">
