new add method for choosing personal vocabulary

--- a/LanguageBuilder/Views/Students/Details.cshtml
+++ b/LanguageBuilder/Views/Students/Details.cshtml
@@ -39,6 +39,12 @@
             @Html.DisplayNameFor(model => model.UserWord)
         </dt>
         <dd>
+          
+                <div>
+                    Number of Words in Personal Dictionary <span class="badge">@ViewBag.Count</span>
+                </div>
+
+
             <table class="table">
                 <tr>
                     <th>Words in Progress</th>
