--- a/LanguageBuilder/Views/Home/Index.cshtml
+++ b/LanguageBuilder/Views/Home/Index.cshtml
@@ -46,6 +46,6 @@
 
 <div>
     <h1>LANGUAGE BUILDER</h1>
-    <p class="lead">Language Builder is a free web application which helps you learn new languages</p>
+    <p class="lead">Language Builder is a free web application which helps you to learn new languages</p>
     
 </div>
