--- a/LanguageBuilder/Views/Home/About.cshtml
+++ b/LanguageBuilder/Views/Home/About.cshtml
@@ -1,7 +1,18 @@
 ﻿@{
-    ViewBag.Title = "About";
+    ViewBag.Title = "About this project";
 }
 <h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
+<h3>Course Assignment - Software Technologies - SoftUni - Aug 2016</h3>
 
-<p>Use this area to provide additional information.</p>
+<p>This is a simple Web-based application designed to help language learners with the vocabulary acquisition. Its main business logic is based on the "Spaced repetition" learning technique which incorporates increasing intervals of time between subsequent review of previously learned material in order to exploit the psychological spacing effect and commit the new material to the long term memory.</p>
+
+<p>Technology stack : C# + ASP.NET MVC + Entity Framework + SQL Server + HTML + CSS.</p>
+
+<p>The project implements:</p>
+    <ul>
+    <li>User registration / profiles / login / logout</li>
+    <li>Search for words in a dictionary</li>
+    <li>Add words into personal dictionary</li>
+    <li>Review the words based on knowledge level and intelligent time span between each review</li>
+    
+</ul>
